added css to my project

--- a/index.html
+++ b/index.html
@@ -1,76 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="layout">
-        <div class="topbar">
-            <div class="minibar1">
-                <div class="search"></div>
-                <div class="notification profile"></div>
-            </div>
-            <div class="minibar2">
-                <div class="greating media_box"></div>
-            </div>
+      <div class="top-bar">
+        <div class="search">
+          <button type="submit" class="fa fa-search button"></button>
+          <input
+            type="text"
+            class="searchtxt"
+            placeholder="Search what you need..."
+          />
         </div>
-        <div class="sidebar">
-            <div class="bar">
-                <div class="logo"></div>
+        <div class="profile">
+          <div class="avatar">
+            <img
+              src="/admin-dashboard/cat_img.jpg"
+              height="50px"
+              width="50px"
+              id="avatar1"
+            />
+          </div>
+          <div class="name"><p>CookieDoughAlex</p></div>
 
-            </div>
-            <div class="home-bar">
-                <div>
-                    <p>home buttons</p>
-                </div>
-                <div>
-                    <p>home buttons</p>
-                </div>
-                <div>
-                    <p>home buttons</p>
-                </div>
-                <div>
-                    <p>home buttons</p>
-                </div>
-                <div>
-                    <p>home buttons</p>
-                </div>
-                <div>
-                    <p>home buttons</p>
-                </div>
-            </div>
-            <div class="oder">
-                <p>oder buttons</p>
-            </div>
-            <div>
-                <p>oder buttons</p>
-            </div>
-            <div>
-                <p>oder buttons</p>
-            </div>
+          <div class="fa fa-bell notification"></div>
         </div>
+        <div class="greating">
+            <div class="avatar1"><img src="/admin-dashboard/cat_img.jpg" width="70px" height="70px"></div>
+            <div class="greater"><p>Hi there</p></div>
+            <div class="name3"><p>CookieDoughAlex</p></div>
+        </div>
+        <div class="media"></div>
+      </div>
+      <div class="side-bar">
+        <div class="logo">
+          <img
+            src="/admin-dashboard/panguin.png"
+            width="50px"
+            height="50px"
+            alt="panguin"
+          />
+          <p>Dashboard</p>
+        </div>
+        <div class="menu">
+          <ul class="menulist">
+            <li>Home</li>
+            <li>Profil</li>
+            <li>Message</li>
+            <li>Histor</li>
+            <li>Task</li>
+            <li>Communitie</li>
+          </ul>
+        </div>
+        <div class="oder">
+          <ul class="orderli">
+            <li>Settings</li>
+            <li>Support</li>
+            <li>Privacy</li>
+          </ul>
+        </div>
+      </div>
+      <div class="main"></div>
+      <div class="project">
+        <div class="item"></div>
+        <div class="item2"></div>
+        <div class="item3"></div>
+        <div class="item-4"></div>
+        <div class="itme-5"></div>
+        <div class="idem-6"></div>
+      </div>
+      <div class="right">
+        <div class="announcment"></div>
+        <div class="trending"></div>
+      </div>
     </div>
-    <div class="main">
-        <div class="projects">
-            <div class="left">
-                <div class="l-child"></div>
-                <div class="l-child"></div>
-                <div class="l-child"></div>
-                <div class="l-child"></div>
-                <div class="l-child"></div>
-            </div>
-            <div class="right">
-                <div class="announcement"></div>
-                <div class="trending"></div>
-            </div>
-
-        </div>
-    </div>
-</body>
-
+  </body>
 </html>
