--- a/index.html
+++ b/index.html
@@ -28,19 +28,37 @@
               src="/admin-dashboard/cat_img.jpg"
               height="50px"
               width="50px"
-              id="avatar1"
+              class="avatar1"
             />
           </div>
-          <div class="name"><p>CookieDoughAlex</p></div>
+          <div class="name" id="profilename">
+            <p>CookieDoughAlex</p>
+          </div>
 
           <div class="fa fa-bell notification"></div>
         </div>
         <div class="greating">
-            <div class="avatar1"><img src="/admin-dashboard/cat_img.jpg" width="70px" height="70px"></div>
-            <div class="greater"><p>Hi there</p></div>
-            <div class="name3"><p>CookieDoughAlex</p></div>
+          <div class="avatar2">
+            <img
+              src="/admin-dashboard/cat_img.jpg"
+              class="avatar1"
+              width="70px"
+              height="70px"
+            />
+          </div>
+          <div class="greater">
+            <div id="hi"><p>Hi there</p></div>
+
+            <div id="greatname">
+              <p>CookieDoughAlex (@Cookie)</p>
+            </div>
+          </div>
         </div>
-        <div class="media"></div>
+        <div class="media">
+          <button type="submit" class="mediabut">New</button>
+          <button type="submit" class="mediabut">Upload</button>
+          <button type="submit" class="mediabut">Share</button>
+        </div>
       </div>
       <div class="side-bar">
         <div class="logo">
@@ -70,14 +88,15 @@
           </ul>
         </div>
       </div>
-      <div class="main"></div>
       <div class="project">
+        <div class="caption"><h2 id="txtcaption">Your Projects</h2></div>
+        <div class="caption"></div>
         <div class="item"></div>
         <div class="item2"></div>
         <div class="item3"></div>
-        <div class="item-4"></div>
-        <div class="itme-5"></div>
-        <div class="idem-6"></div>
+        <div class="item4"></div>
+        <div class="itme5"></div>
+        <div class="idem6"></div>
       </div>
       <div class="right">
         <div class="announcment"></div>
