finished with css and html, now i just have to make it pretty

--- a/index.html
+++ b/index.html
@@ -89,17 +89,19 @@
         </div>
       </div>
       <div class="project">
-        <div class="caption"><h2 id="txtcaption">Your Projects</h2></div>
-        <div class="caption"></div>
-        <div class="item"></div>
-        <div class="item2"></div>
-        <div class="item3"></div>
-        <div class="item4"></div>
-        <div class="itme5"></div>
-        <div class="idem6"></div>
+        <div class="caption1"><h2 id="txtcaption">Your Projects</h2></div>
+        <div class="caption2"></div>
+        <div class="item item"></div>
+        <div class="item item2"></div>
+        <div class="item item3"></div>
+        <div class="item item4"></div>
+        <div class="item item5"></div>
+        <div class="item item6"></div>
       </div>
       <div class="right">
+        <div class="caption3 caption1"><h2 class="txtcaption1">Announcments</h2></div>
         <div class="announcment"></div>
+        <div class="caption4 caption1"><h2 class="txtcaption1">Trending</h2></div>
         <div class="trending"></div>
       </div>
     </div>
