i will finish it next ime

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           />
         </div>
         <div class="profile">
+          <div class="fa fa-bell notification"></div>
           <div class="avatar">
             <img
               src="/admin-dashboard/cat_img.jpg"
@@ -34,8 +35,6 @@
           <div class="name" id="profilename">
             <p>CookieDoughAlex</p>
           </div>
-
-          <div class="fa fa-bell notification"></div>
         </div>
         <div class="greating">
           <div class="avatar2">
@@ -63,12 +62,13 @@
       <div class="side-bar">
         <div class="logo">
           <img
+            class="logoimg"
             src="/admin-dashboard/panguin.png"
             width="50px"
             height="50px"
             alt="panguin"
           />
-          <p>Dashboard</p>
+          <p class="dashtxt">Dashboard</p>
         </div>
         <div class="menu">
           <ul class="menulist">
@@ -91,18 +91,49 @@
       <div class="project">
         <div class="caption1"><h2 id="txtcaption">Your Projects</h2></div>
         <div class="caption2"></div>
-        <div class="item item"></div>
-        <div class="item item2"></div>
-        <div class="item item3"></div>
-        <div class="item item4"></div>
-        <div class="item item5"></div>
-        <div class="item item6"></div>
+        <div class="itemadd item">
+          <h3>super cool project</h3>
+          <p>righting something about my projects, bla bla bla here we are.</p>
+        </div>
+        <div class="itemadd item2">
+          <h3>super cool project</h3>
+          <p>righting something about my projects, bla bla bla here we are.</p>
+        </div>
+        <div class="itemadd item3">
+          <h3>super cool project</h3>
+          <p>righting something about my projects, bla bla bla here we are.</p>
+        </div>
+        <div class="itemadd item4">
+          <h3>super cool project</h3>
+          <p>righting something about my projects, bla bla bla here we are.</p>
+        </div>
+        <div class="itemadd item5">
+          <h3>super cool project</h3>
+          <p>righting something about my projects, bla bla bla here we are.</p>
+        </div>
+        <div class="itemadd item6">
+          <h3>super cool project</h3>
+          <p>righting something about my projects, bla bla bla here we are.</p>
+        </div>
       </div>
       <div class="right">
-        <div class="caption3 caption1"><h2 class="txtcaption1">Announcments</h2></div>
-        <div class="announcment"></div>
-        <div class="caption4 caption1"><h2 class="txtcaption1">Trending</h2></div>
-        <div class="trending"></div>
+        <div class="caption3 caption1">
+          <h2 class="txtcaption1">Announcments</h2>
+        </div>
+        <div class="announcment">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        <div class="caption4 caption1">
+          <h2 class="txtcaption1">Trending</h2>
+        </div>
+        <div class="trending">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </div>
     </div>
   </body>
